# sora-no-tools

./: .gitignore  Cargo.toml  coof.bat  coof.js  coof.sh
coof/: Cargo.toml
coof/scripts/: coof.bat  coof.js  coof.sh
coof/src/: main.rs
stream/: counter.html
superspreader/: Cargo.toml
superspreader/src/: irc_source.rs  main.rs  message.rs
