[package]
authors = ["steinuil <steenuil.owl@gmail.com>"]
edition = "2018"
name = "superspreader"
version = "1.0.1"

[dependencies]
clap = "2.33"
futures = "0.3"
hyper = {version = "0.14", features = ["server", "http1", "stream", "runtime"]}
irc = "0.15"
log = "0.4"
simple_logger = "1.13"
structopt = "0.3"
tokio = {version = "1.12", features = ["full"]}
